--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=demo
+spring.graphql.graphiql.enabled=true
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/graphgl_event
+spring.datasource.username= annakulova
+spring.datasource.password= db
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+# Graphql
+graphql.servlet.mapping= /apis/graphql
